[package]
name = "oreos"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironfish_rust = { path = "./ironfish/ironfish-rust" }
ironfish_zkp = { path = "./ironfish/ironfish-zkp" }
anyhow = "1.0.69"
blake3 = "1.3.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
